sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:6: error: ')' expected but integer literal found.
   		 for(i<-getNombre()-2 0){
                                      ^AlgBubbleSort2:14: error: illegal start of simple expression
  }
  ^AlgBubbleSort2:15: error: 'while' expected but '}' found.
}
^AlgBubbleSort2:20: error: Unmatched closing brace '}' ignored here
}
^