sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
var inverse= true 
do {
	inverse =false;
   		 for(i<-getNombre()-2 0){
   		 	for(j<-0 to i){
   		 	if (plusPetit(i+1,i)){
   	          	echange(i,i+1) 
   		          inverse = true;
   		 }	
   		  }
   	}while(inverse==true)
  }
}
 
}
